# rustos

./: Cargo.toml  README.md  x86_64-rustos.json
src/: main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
