[package]
name = "rustos"
version = "0.1.0"
author = "Ian Kim"
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
test-timeout = 300


[[test]]
name = "should_panic"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to make sure that the VGA buffer does not get destroyed
volatile = "0.2.6"
# To make binary bootable
bootloader = "0.9.23"
# Stand in for mutex that doesn't rely on any OS APIs
spin = "0.5.2"
# for opening ports
x86_64 = "0.14.2"
# for communicating between the OS and the outside world
# in our situation, we use it to output testing text
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_builtins"]
